--- a/website/styles.css
+++ b/website/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 1em;
   font-family: Arial, Helvetica, sans-serif;
+  background: #bdc8d0;
 }
 
 form {
@@ -8,12 +9,32 @@ form {
   margin: 2em 0;
 }
 
-label {
+form label {
   font-weight: bold;
 }
 
-input {
+form input {
+  height: 2em;
+  width: 30%;
   margin: 0 1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  border: 2px solid #000;
+  border-radius: 10px;
+}
+
+form button {
+  padding: 0.4em 4em;
+  background: #fff;
+  border: 4px solid #000;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+form button:hover {
+  background: #146ebb;
+  color: #fff;
 }
 
 div#jumbled {
