--- a/website/styles.css
+++ b/website/styles.css
@@ -55,3 +55,13 @@ div.row .letter {
 div.row .letter:nth-of-type(even) {
   top: 0.6em;
 }
+
+div.alert {
+  margin-bottom: 1em;
+  padding: 1em;
+  background: #f57f7f;
+  border: 1px solid #690000;
+  border-radius: 10px;
+  color: #690000;
+  font-weight: bold;
+}
