--- a/website/styles.css
+++ b/website/styles.css
@@ -52,6 +52,10 @@ div.row .letter {
   padding: 0 0.5em;
 }
 
+.letter.used {
+  color: #a2a2a2;
+}
+
 div.row .letter:nth-of-type(even) {
   top: 0.6em;
 }
