Mark any incorrect letters entered
And don't error when it happens!

--- a/website/styles.css
+++ b/website/styles.css
@@ -89,3 +89,8 @@ input.letter-box {
 input.letter-box:not(:last-child) {
   margin-right: 0.4em;
 }
+
+input.letter-box.incorrect {
+  border-color: #ff0000;
+  color: #ff0000;
+}
