--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@ div.row .letter {
   padding: 0 0.5em;
 }
 
+.letter.used {
+  color: #a2a2a2;
+}
+
 div.row .letter:nth-of-type(even) {
   top: 0.6em;
 }
@@ -84,4 +88,9 @@ input.letter-box {
 
 input.letter-box:not(:last-child) {
   margin-right: 0.4em;
+}
+
+input.letter-box.incorrect {
+  border-color: #ff0000;
+  color: #ff0000;
 }
